--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,8 @@ html {
     height: 100%;
     font-family: 'Lato', sans-serif;
     background-color: #0B0408;
+    overflow-x: hidden;
+    overflow-y:hidden;
 }
 /* Common rules */
 /* Stack rules */
@@ -134,12 +136,14 @@ html {
     width: 100%;
     z-index: 3;
     background-color: transparent;
-    visibility: hidden;
+    display: none;
 }
 
 .columns > div:target .contentbox {
-    visibility: visible;
+    display: block;
     z-index: 5;
+    overflow-x: hidden;
+    overflow-y:auto;
 }
 
 .topbar {
@@ -183,7 +187,7 @@ html {
 
 .informbox {
     background-color: #fff;
-    height: 65%;
+    height: auto;
     background-color: #EEEEEE;
     padding: 30px 20px;
     color:#666;
@@ -203,6 +207,9 @@ html {
     .blocks {
         height: 100%;
         opacity: 0.25;
+    }
+    .informbox{
+        height: 65%;
     }
 }
 
