--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ html {
 }
 
 .blocks:hover .namebanner {
-    opacity: 0.8;
+    opacity: 0.9;
     transition: opacity 800ms ease-out;
     -webkit-transition: opacity 800ms ease-out;
     -moz-transition: opacity 800ms ease-out;
@@ -180,9 +180,9 @@ html {
     padding: 10px;
     font-size: 1em;
     color: #ebebeb;
-    background-color: #1c1c1c;
+    background-color: #151515;
     position: absolute;
-    bottom: 30%;
+    bottom: 18%;
     opacity: 0;
     border: 1px solid #0d0d0d;
     border-left-width: 0;
@@ -192,6 +192,8 @@ html {
     cursor: pointer;
     text-decoration: none;
     font-weight: 700;
+    text-shadow: 1px 1px 2px #000;
+    box-shadow: 120px -1px 15px #2F2F2F inset;
 }
 
 
@@ -316,6 +318,8 @@ html {
         height: 65%;
     }
 }
+
+/* Hotfix #2 : now blocks are clickable */
 
 .clickevent {
     height: 100%;
